#pragma once
#include "PlayingPiece.h"

class PlayingPieceO : public PlayingPiece {
public:
    PlayingPieceO() : PlayingPiece(O) {}
};
