#pragma once
#include "PlayingPiece.h"

class PlayingPieceX : public PlayingPiece {
public:
    PlayingPieceX() : PlayingPiece(X) {}
};
